<resources>
    <string name="app_name">AppGate</string>
    <!--Hints-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_password_confirm">Confirmar contraseña</string>
    <!--buttons-->
    <string name="btn_sing_in">Ingresar</string>
    <string name="btn_sing_up">Registrarme</string>
    <string name="btn_ok">Aceptar</string>
    <!--descriptions-->
    <string name="description_status_success">Exitoso</string>
    <string name="description_status_failure">Fallido</string>
    <string name="description_location_permission_required">Para usar la aplicación se requieren los permisos de ubicación.</string>
    <string name="description_gps_enable_required">Para usar la aplicación se requiere que enciendas el GPS.</string>
    <string name="description_sing_in_screen">Si tienes cuenta ingresa, sino regístrate.</string>
    <!--Warnings-->
    <string name="warning_email_required">El email es requerido.</string>
    <string name="warning_password_required">La contraseña es requerida.</string>
    <string name="warning_password_confirm_required">Debes confirmar la contraseña.</string>
    <string name="warning_wrong_passwords">Las contraseñas no son iguales.</string>
    <string name="warning_email_not_valid">El email no es valido.</string>
    <string name="warning_password_not_valid">La contraseña debe tener mínimo 8 caracteres donde incluya mayúsculas, minúsculas, números y caracteres especiales.</string>
    <string name="warning_location">Alerta</string>
    <!--Warnings-->
    <string name="error_unexpected">Error inesperado.</string>
    <string name="error_incorrect_credentials">Email o contraseña no son correctos.</string>
</resources>